--- a/css/variables.css
+++ b/css/variables.css
@@ -10,7 +10,7 @@
     --card-color: rgba(255, 255, 255, 0.92);
 
     /* FONTS */
-    --heading-font: 'Playfair Display', serif;
+    --heading-font: 'Merriweather', serif;
     --body-font: 'Inter', sans-serif;
 
     /* SPACING */
